Add elapsed distance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="latitude">Latitude</string>
     <string name="compassDescription">Compass</string>
     <string name="go">Go!</string>
+    <string name="Distance">Distance</string>
 
 </resources>
